--- a/Readme
+++ b/Readme
@@ -1,1 +1,46 @@
+## Encrypted Live Video Traffic Trace Dataset (pcap)
 
+Privacy-preserving trace data of encrypted livestream sessions self-collected across multiple platforms, released to support reproducible research on “identification and classification of encrypted livestream traffic.”
+
+## Notes
+- Every **60s sessions** are saved into a single pcap file.
+
+---
+
+## What’s inside
+
+### Platforms
+- **Bilibili**
+- **Douyin**
+- **Douyu**
+- **Huya**
+
+### Transport (in our captures)
+- **Bilibili**: observed **both** (i) **HTTPS over TCP** with **TLS 1.2 / TLS 1.3**, and (ii) **QUIC over UDP (HTTP/3)** in some sessions
+- **Douyin / Douyu / Huya**: encrypted transport observed in our captures (mainly **TLS over TCP** and/or **QUIC over UDP** depending on client/network conditions)
+
+### Capture setting
+- Controlled **100 Mbps** access rate
+- Focus on the **first 60 seconds after livestream starts**
+
+## Repository structure
+
+```text
+├── DataSet/
+│   ├── BiliBili/
+│   │   ├── game/Original quality
+│   │   ├── chat/Original quality
+│   │   └── entertainment/Original quality
+│   ├── Douyin/
+│   │   ├── game/Original quality
+│   │   ├── chat/Original quality
+│   │   └── entertainment/Original quality
+│   ├── Douyu/
+│   │   ├── game/Original quality
+│   │   ├── chat/Original quality
+│   │   └── entertainment/Original quality
+│   └── Huya/
+│       ├── game/Original quality
+│       ├── chat/Original quality
+│       └── entertainment/Original quality
+└── README.md
